# Scalable-Messaging-Platform

./: .gitignore  .travis.yml  COPYING  Makefile.in  README  configure  configure.ac  ejabberd.yml.example  ejabberdctl.cfg.example  ejabberdctl.template  mix.exs  rebar.config  rebar.config.script  vars.config.in
asn1/: OCSP.asn1  PKIX1Explicit88.asn1
c_src/: jlib.c
doc/: ChangeLog.txt  Makefile  commercial.tex  dev.html  features.html  guide.html  guide.tex  mod_admin_p1_commands.sh  version.tex
include/: adhoc.hrl  bosh.hrl  ejabberd.hrl  ejabberd_c2s.hrl  ejabberd_commands.hrl  ejabberd_config.hrl  ejabberd_ctl.hrl  ejabberd_http.hrl  ejabberd_sm.hrl  ejabberd_web_admin.hrl  eldap.hrl  http_bind.hrl  jlib.hrl  licence.hrl  logger.hrl  mod_filter.hrl  mod_jabs.hrl  mod_mon.hrl  mod_muc.hrl  mod_muc_room.hrl  mod_offline.hrl  mod_privacy.hrl  mod_proxy65.hrl  mod_roster.hrl  ns.hrl  pubsub.hrl  xmpp_codec.hrl
license/: README.txt  build_license_installer.sh  ejabberd_patch.sh
m4/: erlang-extra.m4
mod_pubsub_ng/: exmpp_pubsub.erl  mod_pubsub_dev.erl  node_flat_dev.erl  pubsub_broadcast.erl  pubsub_core.erl  pubsub_db.erl  pubsub_db_mnesia.erl  pubsub_disco.erl  pubsub_groups.erl  pubsub_hooks.erl  pubsub_index_dev.erl  pubsub_options.erl  pubsub_parser.erl  pubsub_tools.erl
priv/msgs/: ca.msg  ca.po  cs.msg  cs.po  de.msg  de.po  ejabberd.pot  el.msg  el.po  eo.msg  eo.po  es.msg  es.po  fr.msg  fr.po  gl.msg  gl.po  he.msg  he.po  id.msg  id.po  it.msg  it.po  ja.msg  ja.po  nl.msg  nl.po  no.msg  no.po  pl.msg  pl.po  pt-br.msg  pt-br.po  pt.msg  pt.po  ru.msg  ru.po  sk.msg  sk.po  sv.msg  (+13 more)
rel/: reltool.config.script
sql/: history.sql  lite.sql  mssql.sql  mssql2000.sql  mssql2005.sql  mysql.sql  pg.sql
src/: acl.erl  adhoc.erl  configure  configure.ac  cyrsasl.erl  cyrsasl_anonymous.erl  cyrsasl_digest.erl  cyrsasl_oauth.erl  cyrsasl_pkix.erl  cyrsasl_plain.erl  cyrsasl_scram.erl  dht.erl  ejabberd.app  ejabberd.erl  ejabberd.hrl  ejabberd_admin.erl  ejabberd_app.erl  ejabberd_auth.erl  ejabberd_auth_anonymous.erl  ejabberd_auth_external.erl  ejabberd_auth_internal.erl  ejabberd_auth_ldap.erl  ejabberd_auth_mnesia.erl  ejabberd_auth_odbc.erl  ejabberd_auth_p1db.erl  ejabberd_auth_pam.erl  ejabberd_auth_pkix.erl  ejabberd_auth_rest.erl  ejabberd_auth_riak.erl  ejabberd_auth_sql.erl  ejabberd_bosh.erl  ejabberd_c2s.erl  ejabberd_c2s.hrl  ejabberd_c2s_config.erl  ejabberd_captcha.erl  ejabberd_cluster.erl  ejabberd_commands.erl  ejabberd_commands.hrl  ejabberd_commands_doc.erl  ejabberd_config.erl  (+305 more)
src/eldap/: eldap.erl
src/mod_muc/: mod_muc.erl  mod_muc_log.erl  mod_muc_room.erl  mod_muc_room.hrl
src/mod_proxy65/: mod_proxy65_sm.erl
src/mod_pubsub/: mod_pubsub.erl  mod_pubsub_odbc.erl  node_flat_odbc.erl  node_hometree.erl  node_pep_odbc.erl  pubsub.hrl
src/odbc/: ejabberd_odbc.erl  mysql.sql  odbc_queries.erl
src/tls/: tls.erl
src/web/: ejabberd_bosh.erl  ejabberd_http.erl  ejabberd_http.hrl  ejabberd_http_poll.erl  ejabberd_http_ws.erl  ejabberd_http_wsjson.erl  ejabberd_websocket.erl  mod_bosh.erl  mod_http_bind.erl  mod_http_fileserver.erl
test/: acl_test.exs  ejabberd_SUITE.erl  ejabberd_commands_mock_test.exs  ejabberd_commands_test.exs  ejabberd_hooks_test.exs  elixir_SUITE.erl  jid_test.exs  mod_admin_extra_test.exs  mod_http_api_mock_test.exs  mod_http_api_test.exs  ocsp_server.erl  suite.erl  suite.hrl
test/ejabberd_SUITE_data/: cert.pem  crl.der  ejabberd.cfg  ejabberd.ldif  ejabberd.yml  gencerts.sh  openssl.cnf  rev-cert.pem
tools/: build_license.es  check_custom_changes.sh  check_so_changes.sh  check_xep_versions.sh  configure.erl  crossbuild.sh  ejabberd_patch.erl  ejabberd_patch.sh  fake-api.js  fake-offline-api.js  generate-guide-html.pl  joincluster  leavecluster  migrate_pubsub_p1db.erl  rosters.json  start_ssl.sh  xmpp_codec.erl  xmpp_codec.hrl  xmpp_codec.spec
tools/win32/: crossbuild.sh  eimp.patch  install_dll.sh  stringprep.patch  tls.patch  xml.patch
